kubernetes-catas/exercises/06 - ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multitool
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: multitool
              port:
                number: 80
